more clear messages

--- a/faceapi/templates/faceapi/index.html
+++ b/faceapi/templates/faceapi/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>First, upload all known images to the server.<br>Server images will be mark as known images.</h3>
+    <h3>First, upload all known images to the server.<br>Server images will be mark as known images.
+    <br>Upload only one person's face in a image</h3>
     <a href="http://localhost:8000/faceapi/upload?name={Person_Name}&img={filename/jpg}">
     '''http://localhost:8000/faceapi/upload?name={Person_Name}&img={filename/jpg}'''
     </a>
